# High-speed-autonomous-racing-SONIC-ROS2

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  GUIDELINES.md  README.md  utils.md
ROS2_Foxy_Container/: compose.yaml
ROS2_Foxy_Container/api/: control_api.py
ROS2_Foxy_Container/docker/: Dockerfile  entrypoint.sh
container/: .dockerignore  compose.yaml
container/api/: control_api.py
container/docker/: Dockerfile  entrypoint.sh
docs/: BASELINE.md  LESSONS.md  MPC_REPORT.md  PARAMETERS.md  README.md  REPORT.md  REPORT_BASELINE.md  REPORT_MPC.md  REPORT_PURE_PURSUIT.md  RESULTS.md  baseline_lap_times.csv  experimental_results.aux  experimental_results.out  experimental_results.tex  experimental_results.toc  mpc_lap_times.csv  nan_crash_root_cause.md  rapport_optimisation_f1.md
docs/lap_times/: README.md  lap_times_mpc.csv  lap_times_stanley.csv
docs/pp_racing_line_2026-05-23/: BASELINE.md  LESSONS.md  REPORT.md  RESULTS.md
docs/snapshots/: results_20260523T175117.csv
results/: README.md  lap_times_mpc.csv  lap_times_pure_pursuit.csv  lap_times_stanley.csv
results/baseline_2026-05-20T22-07-12/: lap_times.csv
results/benchmark_2026-05-23T16-28-02/: r1_pp_vs_stanley_2026-05-23.csv  r3_racing_line_2026-05-23.csv  r4_latency_2026-05-24.csv  r4_latency_sweep_2026-05-24.csv
results/benchmark_2026-05-25T19-37-58/: config.yaml  summary.csv
results/benchmark_2026-06-08T19-47-00/: config.yaml  summary.csv
results/benchmark_2026-06-10T10-52-32/: config.yaml  summary.csv
results/mpc_2026-05-25T12-28-36/: lap_times.csv  params.yml
results/mpc_2026-05-25T15-05-24/: lap_times.csv  params.yml
results/mpc_2026-05-25T16-46-36/: lap_times.csv  params.yaml
results/mpc_racing_2026-05-25T15-14-03/: lap_times.csv  params.yml
results/mpc_racing_2026-05-25T16-56-47/: lap_times.csv  params.yaml
scripts/: README.md  analyze_diag.py  bench.py  benchmark.py  check_zigzag.py  compare_lap_times.py  diag_metrics.py  generate_racing_line.py  kill_all_process.sh  requirements.txt
scripts/configs/: README.md  f1_circuit.yaml  (+11 more)
src/AutoCarROS2/autocar_gui/: CMakeLists.txt  package.xml
src/AutoCarROS2/autocar_gui/autocar_gui/: __init__.py  backend.py  http_backend.py  image_utils.py  main_window.py  ros_backend.py
src/AutoCarROS2/autocar_gui/autocar_gui/widgets/: __init__.py  camera_view.py  control_bar.py  telemetry_panel.py
src/AutoCarROS2/autocar_gui/nodes/: control_panel.py
src/AutoCarROS2/autocar_nav_pure_pursuit_lidar/: CMakeLists.txt  FAQ.md  README.md  package.xml
src/AutoCarROS2/autocar_nav_pure_pursuit_lidar/autocar_nav_pure_pursuit_lidar/: __init__.py  centerline_extractor.py  cubic_spline_interpolator.py  map_centerline.py  map_localizer.py  map_track_geometry.py  normalise_angle.py  pure_pursuit.py  racing_line_mincurv.py  racing_line_smooth.py  slam_pose.py  yaw_to_quaternion.py
src/AutoCarROS2/autocar_nav_pure_pursuit_lidar/config/: navigation_params.yaml  slam_toolbox.yaml
src/AutoCarROS2/autocar_nav_pure_pursuit_lidar/nodes/: global_planner_lidar.py  localisation.py  localplanner.py  map_saver.py  tracker.py
src/AutoCarROS2/autocar_racing_line/: CMakeLists.txt  package.xml
src/AutoCarROS2/autocar_racing_line/data/: f1_circuit_meta.json  waypoints_f1.csv  waypoints_f1_racing.csv  waypoints_oval.csv  waypoints_oval_racing.csv  waypoints_racing.csv
src/AutoCarROS2/autocar_racing_line/scripts/: generate_f1_circuit_waypoints.py  generate_oval_waypoints.py  generate_racing_line.py  generate_racing_line_mincurv.py  smooth_racing_line.py
(+119 files in other folders)
