<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autocar_nav_pure_pursuit_lidar</name>
  <version>0.0.0</version>
  <description>LiDAR-driven Pure Pursuit: lap-1 map exploration with local centerline, lap-2+ map localization and racing line</description>
  <maintainer email="winston@todo.todo">winston</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <depend>autocar_msgs</depend>
  <exec_depend>autocar_nav_pure_pursuit</exec_depend>
  <exec_depend>autocar_racing_line</exec_depend>
  <exec_depend>autocar_map</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
